Fix: Registro y set de los datos en la pagina

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,6 @@
 # Habilitar el motor de reescritura
 RewriteEngine On
-
+​Header set Access-Control-Allow-Origin "*"
 # Establecer el directorio base
 RewriteBase /public/
 
