--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "postcss src/css/tailwind.css -o public/css/styles.css",
     "build": "webpack --mode production",
     "start": "webpack serve --mode development"
   },
@@ -19,6 +20,7 @@
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "postcss": "^8.4.49",
+    "postcss-cli": "^11.0.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.15",
     "webpack": "^5.96.1",
